apps/user/base/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        version: v1
    spec:
      containers:
        - name: user-service
          image: docker.io/ama2352/user-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - name: keys-volume
              mountPath: /etc/keys
              readOnly: true
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 2
            periodSeconds: 5
      volumes:
        - name: keys-volume
          secret:
            secretName: rsa-keys
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - name: http
      port: 80
      targetPort: http
