apps/user/base/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ride-hailing-gateway
  http:
    - match:
        - uri:
            prefix: "/user/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: user-service
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: user-service
spec:
  host: user-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 50
        http2MaxRequests: 100
        maxRequestsPerConnection: 2
  subsets:
    - name: v1
      labels:
        version: v1
